--- a/app/src/main/res/layout/fragment_exam_center.xml
+++ b/app/src/main/res/layout/fragment_exam_center.xml
@@ -1,153 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootview"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.ExamCenterFragment">
-
-    <TextView
-        android:id="@+id/txt_title"
-        android:layout_marginTop="@dimen/personal_info_padding"
-        android:layout_marginRight="@dimen/personal_info_padding"
-        android:layout_marginLeft="@dimen/personal_info_padding"
-        style="@style/title_text_style"
-        android:text="@string/personal_info"
-        android:textSize="@dimen/location_text_size"
-        android:textStyle="bold"
-        android:textColor="@color/text_color"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <RelativeLayout
-        android:id="@+id/linear_top"
-        android:layout_margin="@dimen/personal_info_padding"
-        android:layout_below="@+id/txt_title"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:orientation="vertical"
+        android:padding="@dimen/profile_padding"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".fragment.StudentProfileFragment">
 
-        <RelativeLayout
-            android:elevation="5dp"
-            android:layout_centerHorizontal="true"
-            app:layout_anchorGravity="top|center"
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_image"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/prof_image"
-                android:src="@drawable/vvm_logo_old"
-                android:layout_width="130dp"
-                android:layout_margin="3dp"
-                android:layout_height="130dp" />
-            </android.support.v7.widget.CardView>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/card_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btn_edit_prof_img"
-                android:text="Choose from Gallery"
-                android:foreground="?attr/selectableItemBackground"
-                android:background="@drawable/custom_img_button"
-                android:textColor="@color/colorPrimary"
-                android:textAllCaps="false"
-                android:padding="8dp"
-                android:minHeight="1dp"
-                android:layout_margin="5dp"
+            <TextView
+                android:text="School Details"
+                android:layout_margin="@dimen/content_title_margin"
+                style="@style/title_text_style"
+                android:textColor="@color/text_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-                <Button
-                    android:id="@+id/btn_camera"
-                    android:text="Capture from Camera"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:background="@drawable/custom_img_button"
-                    android:textColor="@color/colorPrimary"
-                    android:textAllCaps="false"
-                    android:padding="8dp"
-                    android:minHeight="1dp"
-                    android:layout_margin="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <android.support.v7.widget.CardView
+                app:cardUseCompatPadding="true"
+                app:cardCornerRadius="2dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/profile_card_padding"
+                    android:paddingBottom="@dimen/profile_padding"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-        </RelativeLayout>
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_state"
+                            android:background="@drawable/single_line_bg"
+                            style="@style/edittext_style"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="State"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_district"
+                            style="@style/edittext_style"
+                            android:background="@drawable/single_line_bg"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="District"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_city"
+                            style="@style/edittext_style"
+                            android:background="@drawable/single_line_bg"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="City"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_name"
+                            style="@style/edittext_style"
+                            android:background="@drawable/single_line_bg"
+                            android:hint="School Name"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
 
 
-    </RelativeLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/horizontal"
-        android:layout_marginBottom="@dimen/personal_info_horizontal_margin"
-        android:layout_marginTop="@dimen/personal_info_horizontal_margin"
-        android:layout_below="@+id/linear_top"
-        android:background="@color/text_color"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"></LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/horizontal"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_marginTop="@dimen/personal_info_padding"
-            android:layout_marginRight="@dimen/personal_info_padding"
-            android:layout_marginLeft="@dimen/personal_info_padding"
-            android:text="@string/exam_location"
-            android:gravity="center"
-            android:textSize="@dimen/location_text_size"
-            android:textStyle="bold"
-            android:textColor="@color/text_color"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:layout_margin="@dimen/personal_info_padding"
-        android:layout_below="@+id/txt_title"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:layout_margin="@dimen/location_spinner_margin"
-        android:background="@drawable/custom_edt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Spinner
-            android:id="@+id/spinner_state"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_margin="@dimen/location_spinner_margin"
-        android:background="@drawable/custom_edt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Spinner
-            android:id="@+id/spinner_city"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
+</ScrollView>
