--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -13,6 +13,83 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.StudentProfileFragment">
 
+    <RelativeLayout
+        android:id="@+id/linear_top"
+        android:layout_margin="@dimen/personal_info_padding"
+        android:layout_below="@+id/txt_title"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:elevation="5dp"
+            android:layout_centerHorizontal="true"
+            app:layout_anchorGravity="top|center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_image"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/prof_image"
+                    android:src="@drawable/vvm_logo_old"
+                    android:layout_width="130dp"
+                    android:layout_margin="3dp"
+                    android:layout_height="130dp" />
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/card_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btn_edit_prof_img"
+                    android:text="Choose from Gallery"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:background="@drawable/custom_img_button"
+                    android:textColor="@color/colorPrimary"
+                    android:textAllCaps="false"
+                    android:padding="8dp"
+                    android:minHeight="1dp"
+                    android:layout_margin="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/btn_camera"
+                    android:text="Capture from Camera"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:background="@drawable/custom_img_button"
+                    android:textColor="@color/colorPrimary"
+                    android:textAllCaps="false"
+                    android:padding="8dp"
+                    android:minHeight="1dp"
+                    android:layout_margin="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/horizontal"
+        android:layout_marginBottom="@dimen/personal_info_horizontal_margin"
+        android:layout_marginTop="@dimen/personal_info_horizontal_margin"
+        android:layout_below="@+id/linear_top"
+        android:background="@color/text_color"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"></LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
